phase9-gitops-platform/environments/dev-ocp/ocp-values/routes/harbor-route.yaml
# Harbor UI + registry API — OpenShift Router (thay Ingress Traefik)
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: harbor-platform
  namespace: platform
  labels:
    app.kubernetes.io/name: harbor
    app.kubernetes.io/part-of: phase9-gitops
    cinehome/environment: dev-ocp
  annotations:
    argocd.argoproj.io/sync-wave: "3"
    haproxy.router.openshift.io/timeout: 600s
spec:
  host: harbor-platform.apps.ocp01.npd.co
  to:
    kind: Service
    name: harbor
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
