phase9-gitops-platform/environments/dev-ocp/ocp-values/routes/jenkins-route.yaml
# Jenkins UI — OpenShift Router (thay Ingress Traefik)
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: jenkins-platform
  namespace: platform
  labels:
    app.kubernetes.io/name: jenkins
    app.kubernetes.io/part-of: phase9-gitops
    cinehome/environment: dev-ocp
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  host: jenkins-platform.apps.ocp01.npd.co
  to:
    kind: Service
    name: jenkins
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
